[project]
name = "color-constancy-test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yashikota", email = "52403688+yashikota@users.noreply.github.com" }
]
dependencies = [
    "opencv-python>=4.9.0.80",
    "matplotlib>=3.9.0",
    "colorcorrect>=0.9.1",
    "pillow>=10.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/color_constancy_test"]
